fix: word-wrap / break on provider boxes for long provider names

--- a/pages/global.css
+++ b/pages/global.css
@@ -96,6 +96,12 @@ details > *:not(summary) {
   }
 }
 
+@layer components {
+  .break-word-legacy {
+    word-break: break-word;
+  }
+}
+
 /* Scrollbar */
 ::-webkit-scrollbar {
   width: 8px;
